--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </nav>
      <!-- End Nav -->
 
-  <!-- Hero Section -->
+      <!-- Hero Section -->
   <section class="hero">
     <div class="container">
       <h1>Welcome to Our Website</h1>
@@ -62,7 +62,39 @@
       <a href="#cta" class="btn btn-primary btn-lg">Get Started</a>
     </div>
   </section>
-<!-- End Hero -->
+    <!-- End Hero -->
+
+     <section id="service">
+        <div class="container-lg my-5 ">
+            <div class="row">
+                <div class="col-4"><div class="card" style="width: 18rem;">
+                    <img src="img/pexels-therato-3374205.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div></div>
+                <div class="col-4"><div class="card" style="width: 18rem;">
+                    <img src="img/pexels-kendal-3986695.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div></div>
+                <div class="col-4"><div class="card" style="width: 18rem;">
+                    <img src="img/pexels-pixabay-158734.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div></div>
+            </div>
+        </div>
+     </section>
+ 
 
 
 
